--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1369</width>
-    <height>808</height>
+    <width>1403</width>
+    <height>920</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -18,16 +18,16 @@
     <property name="geometry">
      <rect>
       <x>0</x>
-      <y>0</y>
-      <width>1391</width>
-      <height>841</height>
+      <y>20</y>
+      <width>1681</width>
+      <height>1301</height>
      </rect>
     </property>
     <property name="tabShape">
      <enum>QTabWidget::Triangular</enum>
     </property>
     <property name="currentIndex">
-     <number>6</number>
+     <number>8</number>
     </property>
     <widget class="QWidget" name="tab_1">
      <attribute name="title">
@@ -1405,15 +1405,28 @@
       </widget>
      </widget>
     </widget>
-    <widget class="QWidget" name="Harris">
+    <widget class="QWidget" name="tab_5">
      <attribute name="title">
-      <string>Page</string>
+      <string>Tab 6</string>
      </attribute>
+     <widget class="QLabel" name="Time">
+      <property name="geometry">
+       <rect>
+        <x>1120</x>
+        <y>250</y>
+        <width>239</width>
+        <height>18</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Time Taken</string>
+      </property>
+     </widget>
      <widget class="QPushButton" name="harris_browse">
       <property name="geometry">
        <rect>
         <x>20</x>
-        <y>20</y>
+        <y>30</y>
         <width>111</width>
         <height>41</height>
        </rect>
@@ -1422,11 +1435,85 @@
        <string>Browse.....</string>
       </property>
      </widget>
+     <widget class="QGroupBox" name="groupBox_3">
+      <property name="geometry">
+       <rect>
+        <x>1100</x>
+        <y>110</y>
+        <width>261</width>
+        <height>131</height>
+       </rect>
+      </property>
+      <property name="title">
+       <string>Harris</string>
+      </property>
+      <widget class="QPushButton" name="harris_button">
+       <property name="geometry">
+        <rect>
+         <x>180</x>
+         <y>100</y>
+         <width>75</width>
+         <height>24</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Apply</string>
+       </property>
+      </widget>
+      <widget class="QWidget" name="layoutWidget_8">
+       <property name="geometry">
+        <rect>
+         <x>20</x>
+         <y>20</y>
+         <width>231</width>
+         <height>29</height>
+        </rect>
+       </property>
+       <layout class="QHBoxLayout" name="horizontalLayout_7">
+        <item>
+         <widget class="QLabel" name="label_2">
+          <property name="text">
+           <string>Ketrnal size</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <layout class="QHBoxLayout" name="horizontalLayout_6">
+          <item>
+           <widget class="QSpinBox" name="harris_kernal"/>
+          </item>
+         </layout>
+        </item>
+       </layout>
+      </widget>
+      <widget class="QWidget" name="layoutWidget_9">
+       <property name="geometry">
+        <rect>
+         <x>20</x>
+         <y>60</y>
+         <width>231</width>
+         <height>27</height>
+        </rect>
+       </property>
+       <layout class="QHBoxLayout" name="horizontalLayout_8">
+        <item>
+         <widget class="QLabel" name="label_3">
+          <property name="text">
+           <string>thresholding</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QDoubleSpinBox" name="thresholding"/>
+        </item>
+       </layout>
+      </widget>
+     </widget>
      <widget class="QGroupBox" name="harris_box_1">
       <property name="geometry">
        <rect>
         <x>20</x>
-        <y>70</y>
+        <y>80</y>
         <width>1071</width>
         <height>371</height>
        </rect>
@@ -1470,42 +1557,183 @@
        </property>
       </widget>
      </widget>
-     <widget class="QPushButton" name="harris_button">
-      <property name="geometry">
-       <rect>
-        <x>1030</x>
-        <y>470</y>
-        <width>75</width>
-        <height>24</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Done</string>
-      </property>
-     </widget>
     </widget>
     <widget class="QWidget" name="tab_4">
      <attribute name="title">
-      <string>Page</string>
+      <string>Tab 7</string>
      </attribute>
-     <widget class="QPushButton" name="browse_feature">
+     <widget class="QPushButton" name="tab7_Browse2">
       <property name="geometry">
        <rect>
-        <x>40</x>
+        <x>140</x>
+        <y>400</y>
+        <width>93</width>
+        <height>41</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Browse.....</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="tab7_Browse1">
+      <property name="geometry">
+       <rect>
+        <x>140</x>
+        <y>50</y>
+        <width>93</width>
+        <height>41</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Browse.....</string>
+      </property>
+     </widget>
+     <widget class="QGroupBox" name="tab3groupBox_13">
+      <property name="geometry">
+       <rect>
+        <x>240</x>
         <y>40</y>
-        <width>91</width>
+        <width>1011</width>
+        <height>351</height>
+       </rect>
+      </property>
+      <property name="title">
+       <string/>
+      </property>
+      <widget class="QLabel" name="tab7_image11">
+       <property name="geometry">
+        <rect>
+         <x>20</x>
+         <y>10</y>
+         <width>361</width>
+         <height>321</height>
+        </rect>
+       </property>
+       <property name="autoFillBackground">
+        <bool>true</bool>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+      <widget class="QLabel" name="tab7_image12">
+       <property name="geometry">
+        <rect>
+         <x>620</x>
+         <y>10</y>
+         <width>371</width>
+         <height>321</height>
+        </rect>
+       </property>
+       <property name="autoFillBackground">
+        <bool>true</bool>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </widget>
+     <widget class="QGroupBox" name="tab3groupBox_14">
+      <property name="geometry">
+       <rect>
+        <x>240</x>
+        <y>390</y>
+        <width>1011</width>
+        <height>351</height>
+       </rect>
+      </property>
+      <property name="title">
+       <string/>
+      </property>
+      <widget class="QLabel" name="tab7_image21">
+       <property name="geometry">
+        <rect>
+         <x>20</x>
+         <y>10</y>
+         <width>361</width>
+         <height>321</height>
+        </rect>
+       </property>
+       <property name="autoFillBackground">
+        <bool>true</bool>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+      <widget class="QLabel" name="tab7_image22">
+       <property name="geometry">
+        <rect>
+         <x>620</x>
+         <y>10</y>
+         <width>371</width>
+         <height>321</height>
+        </rect>
+       </property>
+       <property name="autoFillBackground">
+        <bool>true</bool>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </widget>
+     <widget class="QLabel" name="label_4">
+      <property name="geometry">
+       <rect>
+        <x>1300</x>
+        <y>180</y>
+        <width>61</width>
         <height>31</height>
        </rect>
       </property>
       <property name="text">
-       <string>Browse</string>
+       <string>S Layers</string>
       </property>
      </widget>
+     <widget class="QLabel" name="label_5">
+      <property name="geometry">
+       <rect>
+        <x>1290</x>
+        <y>530</y>
+        <width>61</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>S Layers</string>
+      </property>
+     </widget>
+     <widget class="QSpinBox" name="spinBox7_1">
+      <property name="geometry">
+       <rect>
+        <x>1300</x>
+        <y>230</y>
+        <width>61</width>
+        <height>25</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QSpinBox" name="spinBox7_2">
+      <property name="geometry">
+       <rect>
+        <x>1290</x>
+        <y>580</y>
+        <width>61</width>
+        <height>25</height>
+       </rect>
+      </property>
+     </widget>
+    </widget>
+    <widget class="QWidget" name="tab_6">
+     <attribute name="title">
+      <string>Tab 8</string>
+     </attribute>
      <widget class="QGroupBox" name="groupBox_2">
       <property name="geometry">
        <rect>
         <x>30</x>
-        <y>80</y>
+        <y>50</y>
         <width>1321</width>
         <height>351</height>
        </rect>
@@ -1565,60 +1793,11 @@
       <zorder>ssd_output</zorder>
       <zorder>feature_1</zorder>
      </widget>
-     <widget class="QDoubleSpinBox" name="feature_threshold">
-      <property name="geometry">
-       <rect>
-        <x>480</x>
-        <y>510</y>
-        <width>131</width>
-        <height>21</height>
-       </rect>
-      </property>
-     </widget>
-     <widget class="QLabel" name="ssd_threshold">
-      <property name="geometry">
-       <rect>
-        <x>360</x>
-        <y>480</y>
-        <width>111</width>
-        <height>71</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>        Threshold</string>
-      </property>
-     </widget>
-     <widget class="QPushButton" name="ssd_button">
-      <property name="geometry">
-       <rect>
-        <x>670</x>
-        <y>510</y>
-        <width>91</width>
-        <height>31</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Done</string>
-      </property>
-     </widget>
-     <widget class="QPushButton" name="browse_frature2">
-      <property name="geometry">
-       <rect>
-        <x>470</x>
-        <y>40</y>
-        <width>93</width>
-        <height>29</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Browse</string>
-      </property>
-     </widget>
      <widget class="QGroupBox" name="matching_options">
       <property name="geometry">
        <rect>
         <x>40</x>
-        <y>440</y>
+        <y>410</y>
         <width>261</width>
         <height>141</height>
        </rect>
@@ -1652,6 +1831,268 @@
        </item>
       </widget>
      </widget>
+     <widget class="QPushButton" name="browse_feature">
+      <property name="geometry">
+       <rect>
+        <x>40</x>
+        <y>10</y>
+        <width>91</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Browse</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="browse_frature2">
+      <property name="geometry">
+       <rect>
+        <x>470</x>
+        <y>10</y>
+        <width>93</width>
+        <height>29</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Browse</string>
+      </property>
+     </widget>
+     <widget class="QDoubleSpinBox" name="feature_threshold">
+      <property name="geometry">
+       <rect>
+        <x>480</x>
+        <y>480</y>
+        <width>131</width>
+        <height>21</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLabel" name="ssd_threshold">
+      <property name="geometry">
+       <rect>
+        <x>360</x>
+        <y>450</y>
+        <width>111</width>
+        <height>71</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>        Threshold</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="ssd_button">
+      <property name="geometry">
+       <rect>
+        <x>670</x>
+        <y>480</y>
+        <width>91</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Done</string>
+      </property>
+     </widget>
+    </widget>
+    <widget class="QWidget" name="tab_7">
+     <attribute name="title">
+      <string>Page</string>
+     </attribute>
+     <widget class="QGroupBox" name="threshold_box">
+      <property name="geometry">
+       <rect>
+        <x>30</x>
+        <y>70</y>
+        <width>1031</width>
+        <height>371</height>
+       </rect>
+      </property>
+      <property name="title">
+       <string/>
+      </property>
+      <widget class="QLabel" name="Threshold_input">
+       <property name="geometry">
+        <rect>
+         <x>20</x>
+         <y>10</y>
+         <width>431</width>
+         <height>351</height>
+        </rect>
+       </property>
+       <property name="mouseTracking">
+        <bool>false</bool>
+       </property>
+       <property name="autoFillBackground">
+        <bool>true</bool>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+      <widget class="QLabel" name="thresholdd_output">
+       <property name="geometry">
+        <rect>
+         <x>590</x>
+         <y>10</y>
+         <width>421</width>
+         <height>351</height>
+        </rect>
+       </property>
+       <property name="autoFillBackground">
+        <bool>true</bool>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </widget>
+     <widget class="QPushButton" name="Threshold_browse">
+      <property name="geometry">
+       <rect>
+        <x>30</x>
+        <y>20</y>
+        <width>111</width>
+        <height>41</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Browse.....</string>
+      </property>
+     </widget>
+     <widget class="QGroupBox" name="threshold_options">
+      <property name="geometry">
+       <rect>
+        <x>1090</x>
+        <y>100</y>
+        <width>261</width>
+        <height>161</height>
+       </rect>
+      </property>
+      <property name="title">
+       <string>Options</string>
+      </property>
+      <widget class="QComboBox" name="thrshold_option">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>40</y>
+         <width>241</width>
+         <height>25</height>
+        </rect>
+       </property>
+       <item>
+        <property name="text">
+         <string>Choose a thresholding method</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Optimal Thresholding</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Otsu Thresholding</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Spectural Thresholding</string>
+        </property>
+       </item>
+      </widget>
+      <widget class="QWidget" name="layoutWidget">
+       <property name="geometry">
+        <rect>
+         <x>9</x>
+         <y>70</y>
+         <width>241</width>
+         <height>22</height>
+        </rect>
+       </property>
+       <layout class="QHBoxLayout" name="horizontalLayout_35">
+        <item>
+         <widget class="QRadioButton" name="global_thresholdin_button">
+          <property name="text">
+           <string>Global</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QRadioButton" name="local_tresholding_button">
+          <property name="text">
+           <string>Local</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </widget>
+      <widget class="QWidget" name="layoutWidget_21">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>100</y>
+         <width>241</width>
+         <height>29</height>
+        </rect>
+       </property>
+       <layout class="QHBoxLayout" name="horizontalLayout_33">
+        <item>
+         <widget class="QLabel" name="blocksize">
+          <property name="text">
+           <string>Block size</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <layout class="QHBoxLayout" name="horizontalLayout_34">
+          <item>
+           <widget class="QSpinBox" name="block_size"/>
+          </item>
+         </layout>
+        </item>
+       </layout>
+      </widget>
+      <widget class="QWidget" name="layoutWidget">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>90</y>
+         <width>241</width>
+         <height>20</height>
+        </rect>
+       </property>
+       <layout class="QHBoxLayout" name="horizontalLayout_13">
+        <item>
+         <widget class="QLabel" name="thres">
+          <property name="text">
+           <string>Thresholding value is : </string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLabel" name="threshold_value">
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </widget>
+      <widget class="QPushButton" name="Threshold_button">
+       <property name="geometry">
+        <rect>
+         <x>180</x>
+         <y>130</y>
+         <width>75</width>
+         <height>24</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Apply</string>
+       </property>
+      </widget>
+     </widget>
     </widget>
    </widget>
   </widget>
@@ -1660,8 +2101,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1369</width>
-     <height>26</height>
+     <width>1403</width>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuAdd_Noise">
