--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -27,7 +27,7 @@
      <enum>QTabWidget::Triangular</enum>
     </property>
     <property name="currentIndex">
-     <number>8</number>
+     <number>9</number>
     </property>
     <widget class="QWidget" name="tab_1">
      <attribute name="title">
@@ -1896,7 +1896,7 @@
     </widget>
     <widget class="QWidget" name="tab_7">
      <attribute name="title">
-      <string>Page</string>
+      <string>Tab 9</string>
      </attribute>
      <widget class="QGroupBox" name="threshold_box">
       <property name="geometry">
@@ -2007,7 +2007,7 @@
          <x>9</x>
          <y>70</y>
          <width>241</width>
-         <height>22</height>
+         <height>26</height>
         </rect>
        </property>
        <layout class="QHBoxLayout" name="horizontalLayout_35">
@@ -2059,7 +2059,7 @@
          <x>10</x>
          <y>90</y>
          <width>241</width>
-         <height>20</height>
+         <height>22</height>
         </rect>
        </property>
        <layout class="QHBoxLayout" name="horizontalLayout_13">
@@ -2094,6 +2094,11 @@
       </widget>
      </widget>
     </widget>
+    <widget class="QWidget" name="tab_8">
+     <attribute name="title">
+      <string>Tab 10</string>
+     </attribute>
+    </widget>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
@@ -2102,7 +2107,7 @@
      <x>0</x>
      <y>0</y>
      <width>1403</width>
-     <height>22</height>
+     <height>26</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuAdd_Noise">
